--- a/run_12_vernier_analysis_note/packages.tex
+++ b/run_12_vernier_analysis_note/packages.tex
@@ -39,3 +39,7 @@
 \setcounter{tocdepth}{1}
 \usepackage{amsmath}
 \usepackage{amssymb}
+
+% Create an editing Bookmark
+\newcommand{\edithere}[0]{\textbf{\textcolor{red}{\chapter{Resume Here!}}}}
+
